# simple_ssr

./: .gitignore  Cargo.toml  README.md
.trae/: TODO.md
.trae/documents/: unified_port_design.md  unified_port_implementation_guide.md  unified_port_technical_architecture.md
src/: lib.rs  main.rs  multi_app.rs
src/client/: mod.rs  socks5.rs  tcp.rs  udp.rs
src/config/: client.rs  mod.rs  multi.rs  server.rs
src/crypto/: aead.rs  cipher.rs  mod.rs
src/protocol/: address.rs  http.rs  manager.rs  mod.rs  shadowsocks.rs  socks5.rs  traits.rs  vmess.rs
src/server/: mod.rs  tcp.rs  udp.rs
src/unified/: config.rs  detector.rs  listener.rs  mod.rs  router.rs
src/utils/: address.rs  dns.rs  mod.rs
