[package]
name = "simple_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
bytes = "1.0"
anyhow = "1.0"
log = "0.4"
url = "2.4"
trust-dns-resolver = "0.23"
lru = "0.12"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "iphlpapi"] }
